prova: add configuration to deploy